<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_switch"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="@string/switch_sides"
        android:visible="true" />

    <item
        android:id="@+id/menu_reset"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="@string/reset"
        android:visible="true" />

    switch_sides

    <item
        android:id="@+id/menu_leftColor"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="Left Color"
        android:visible="true">
        <menu>
            <group android:id="@+id/left">
                <item
                    android:id="@+id/menu_leftRed"
                    android:title="@string/red" />
                <item
                    android:id="@+id/menu_leftBlue"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/menu_leftYellow"
                    android:title="@string/yellow" />
                <item
                    android:id="@+id/menu_leftGreen"
                    android:title="@string/green" />
                <item
                    android:id="@+id/menu_leftPurple"
                    android:title="@string/purple" />
                <item
                    android:id="@+id/menu_leftOrange"
                    android:title="@string/orange" />
                <item
                    android:id="@+id/menu_leftBlack"
                    android:title="@string/black" />
                <item
                    android:id="@+id/menu_leftWhite"
                    android:title="@string/white" />
            </group>
        </menu>
    </item>


    <item
        android:id="@+id/menu_leftText"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="Left Text Color"
        android:visible="true">
        <menu>
            <group android:id="@+id/leftText">
                <item
                    android:id="@+id/menu_leftTextRed"
                    android:title="red" />
                <item
                    android:id="@+id/menu_leftTextBlue"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/menu_leftTextYellow"
                    android:title="@string/yellow" />
                <item
                    android:id="@+id/menu_leftTextGreen"
                    android:title="@string/green" />
                <item
                    android:id="@+id/menu_leftTextPurple"
                    android:title="purple" />
                <item
                    android:id="@+id/menu_leftTextOrange"
                    android:title="@string/orange" />
                <item
                    android:id="@+id/menu_leftTextBlack"
                    android:title="@string/black" />
                <item
                    android:id="@+id/menu_leftTextWhite"
                    android:title="@string/white" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_rightColor"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="Right Color"
        android:visible="true">
        <menu>
            <group android:id="@+id/right">
                <item
                    android:id="@+id/menu_rightRed"
                    android:title="red" />
                <item
                    android:id="@+id/menu_rightBlue"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/menu_rightYellow"
                    android:title="@string/yellow" />
                <item
                    android:id="@+id/menu_rightGreen"
                    android:title="@string/green" />
                <item
                    android:id="@+id/menu_rightPurple"
                    android:title="@string/purple" />
                <item
                    android:id="@+id/menu_rightOrange"
                    android:title="@string/orange" />
                <item
                    android:id="@+id/menu_rightBlack"
                    android:title="@string/black" />
                <item
                    android:id="@+id/menu_rightWhite"
                    android:title="@string/white" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_rightText"
        android:showAsAction="collapseActionView"
        android:title="Right Text Color"
        android:checkable="false">
        <menu>
            <group android:id="@+id/rightText">
                <item
                    android:id="@+id/menu_rightTextRed"
                    android:title="red" />
                <item
                    android:id="@+id/menu_rightTextBlue"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/menu_rightTextYellow"
                    android:title="@string/yellow" />
                <item
                    android:id="@+id/menu_rightTextGreen"
                    android:title="@string/green" />
                <item
                    android:id="@+id/menu_rightTextPurple"
                    android:title="@string/purple" />
                <item
                    android:id="@+id/menu_rightTextOrange"
                    android:title="@string/orange" />
                <item
                    android:id="@+id/menu_rightTextBlack"
                    android:title="@string/black" />
                <item
                    android:id="@+id/menu_rightTextWhite"
                    android:title="@string/white" />
            </group>
        </menu>
    </item>


    <item
        android:id="@+id/menu_PointsPerGoal"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="Points Per Goal"
        android:visible="true">
        <menu>
            <group android:id="@+id/pointsPerGoal">
                <item
                    android:id="@+id/one"
                    android:title="1" />
                <item
                    android:id="@+id/two"
                    android:title="2" />
                <item
                    android:id="@+id/six"
                    android:title="6" />
            </group>
        </menu>
    </item>

</menu>